--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "async": "^0.9.0",
     "browser-request": "^0.3.2",
     "semver": "^4.0.3",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "utils": "git+ssh://git@github.com/Prismatik/cordova-utils.git#stable",
   }
 }
