--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "browser-request": "^0.3.2",
     "semver": "^4.0.3",
     "underscore": "^1.7.0",
-    "utils": "git+ssh://git@github.com/Prismatik/cordova-utils.git#stable",
+    "utils": "git+ssh://git@github.com/Prismatik/cordova-utils.git#stable"
   }
 }
