--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "dependencies": {
     "async": "^0.9.0",
     "browser-request": "^0.3.2",
+    "munge-semver": "^1.0.1",
     "semver": "^4.0.3",
-    "underscore": "^1.7.0",
-    "utils": "git+ssh://git@github.com/Prismatik/cordova-utils.git#stable"
+    "underscore": "^1.7.0"
   }
 }
